--- a/src/components/DateContent/ContentDetail.module.css
+++ b/src/components/DateContent/ContentDetail.module.css
@@ -1,34 +1,41 @@
+.box {
+  padding: 0 20px 0 20px;
+}
+
 .user-info {
   margin-bottom: 5px;
+  display: flex;
+  align-items: center;
 }
 
 .user-info span {
-  margin-right: 3px;
 }
 
 .content-info {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .content-info span {
-  margin: 0 4px 0 4px;
+  margin: 0 8px 0 8px;
 }
 
 .content-box {
+  margin-top: 30px;
   padding-bottom: 50px;
   border-bottom: 1px solid gainsboro;
+  line-height: 30px;
 }
 
 .meeting-info {
   display: flex;
   align-items: center;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .meeting-info span {
-  margin: 0 4px 0 4px;
+  margin: 0 8px 0 8px;
 }
 
 .footer {
